# slang-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  xmake.lua
include/: register_slang.h  register_types.h  slang_cpp.h  slang_enums.h
src/: register_slang.cpp  register_types.cpp  slang_cpp.cpp
test/: icon.svg.import  output.spv  project.godot  test.gd  test.tscn
test/addons/slang/: slang.gdextension
